syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.apischan.file";
package com.apischan.file;

message DownloadRequest {
    string fileName = 1;
}

message FileBatch {
    bytes content = 1;
    bool isFinal = 2;
}

